critical bug fix

--- a/templates/dev.templ
+++ b/templates/dev.templ
@@ -2,7 +2,7 @@ package templates
 
 templ DevLoginForm() {
 	<form method="post" action="/login/dev">
-		<label class="text-sm" for="dev-kthid">Log In by username (dev)</label>
+		<label class="text-sm" for="dev-kthid">Log in by username (dev)</label>
 		<div class="flex gap-2">
 			<input
 				id="dev-kthid"
