--- a/templates/user.templ
+++ b/templates/user.templ
@@ -17,7 +17,7 @@ templ Index(devLogin func() templ.Component) {
 					select-none border-transparent outline-none
 					focus:border-cerise-strong hover:border-cerise-light
 				"
-			>Log In with KTH</a>
+			>Log in with KTH</a>
 			@PasskeyLoginForm("", nil)
 			@devLogin()
 			<a
