--- a/templates/passkey.templ
+++ b/templates/passkey.templ
@@ -65,7 +65,7 @@ templ PasskeyLoginForm(kthid string, credAss *protocol.CredentialAssertion) {
 				}
 			</script>
 		}
-		<label class="text-sm" for="pk-kthid">Log In using a Passkey</label>
+		<label class="text-sm" for="pk-kthid">Log in using a Passkey</label>
 		<div class="flex gap-2">
 			<input
 				id="pk-kthid"
