--- a/templates/admin_oidc_clients.templ
+++ b/templates/admin_oidc_clients.templ
@@ -107,7 +107,7 @@ templ OidcClients(clients []database.OidcClient) {
 					class="
 						bg-[#3f4c66] p-1.5 block rounded border text-center
 						select-none border-transparent outline-none
-						focus:border-cerise-strong hover:border-cerise-light
+						focus:border-(--cerise-strong) hover:border-(--cerise-light)
 					 "
 				>New client</button>
 			</form>
