--- a/style.css
+++ b/style.css
@@ -1,27 +1,33 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-.spinner:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    /* margin: 8px; */
-    border-radius: 50%;
-    border: 1px solid;
-    border-color: white transparent white transparent;
-    animation: spinner 1.6s linear infinite;
-    box-sizing: border-box;
+@theme {
+    --cerise-strong: "#ee2a7b";
+    --cerise-regular: "#e83d84";
+    --cerise-light: "#ec5f99";
 }
 
-@keyframes spinner {
-    0% {
-        transform: rotate(0deg);
+@layer utilities {
+    .spinner:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        /* margin: 8px; */
+        border-radius: 50%;
+        border: 1px solid;
+        border-color: white transparent white transparent;
+        animation: spinner 1.6s linear infinite;
+        box-sizing: border-box;
     }
-    100% {
-        transform: rotate(360deg);
+
+    @keyframes spinner {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
     }
 }
 
