Fix header hover highlight

--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -34,7 +34,7 @@ templ page(navItems templ.Component) {
 			class="
 				w-full h-12 bg-gray-700 flex uppercase
 				overflow-auto
-				[&>a:not(:first-child)]:flex [&>a]:items-center [&>a:not(:first-child)]:px-3 hover:[&>a]:bg-gray-600 [&>a]:transition-colors
+				[&>a:not(:first-child)]:flex [&>a]:items-center [&>a:not(:first-child)]:px-3 [&>a]:hover:bg-gray-600 [&>a]:transition-colors
 				[&>a]:shrink-0
 			"
 		>
