--- a/templates/dev.templ
+++ b/templates/dev.templ
@@ -12,7 +12,7 @@ templ DevLoginForm() {
 				placeholder="KTH ID"
 				class="
 					border border-neutral-500 grow
-					outline-none focus:border-(--cerise-strong) hover:border-(--cerise-light)
+					outline-none focus:border-cerisestrong hover:border-ceriselight
 					bg-slate-800 p-1.5 rounded h-8
 				"
 			/>
@@ -20,7 +20,7 @@ templ DevLoginForm() {
 				class="
 					bg-[#3f4c66] shrink-0 h-8 w-8 rounded-full
 					grid place-items-center pointer
-					border border-transparent outline-none focus:border-(--cerise-strong) hover:border-(--cerise-light)
+					border border-transparent outline-none focus:border-cerisestrong hover:border-ceriselight
 				"
 			>
 				<img
