--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -38,9 +38,9 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --color-cerisestrong: "#ee2a7b";
-    --color-ceriseregular: "#e83d84";
-    --color-ceriselight: "#ec5f99";
+    --color-cerisestrong: #ee2a7b;
+    --color-ceriseregular: #e83d84;
+    --color-ceriselight: #ec5f99;
   }
 }
 @layer base {
