maybe fix the "hot" reload issue in chromium

--- a/templates/dev.templ
+++ b/templates/dev.templ
@@ -36,6 +36,14 @@ templ devAutoReload() {
 	<script type="module">
 		let data = undefined;
 		let es = new EventSource("/dev/auto-reload");
-		es.onerror = _ => setInterval(() => fetch("/ping").then(resp => resp.text()).then(() => location.reload()).catch(_ => {}), 200);
+		async function f() {
+			try {
+				const res = await fetch("/ping");
+				await res.text();
+				location.reload();
+			} catch () {
+				setTimeout(f, 200);
+			}
+		};
 	</script>
 }
