--- a/templates/admin_oidc_clients.templ
+++ b/templates/admin_oidc_clients.templ
@@ -30,9 +30,8 @@ templ OidcClient(client database.OidcClient, secret []byte) {
 				<code>{ b64(secret) }</code>
 			</p>
 		}
-
 		<div class="flex gap-2 items-center">
-			<label for="hive-system-id">Hive System ID:</label>
+			<label for={ "hive-system-id-" + client.ID }>Hive System ID:</label>
 			if client.HiveSystemID != "" {
 				<div class="flex gap-2 items-center hive-system-id">
 					<p>
@@ -40,13 +39,13 @@ templ OidcClient(client database.OidcClient, secret []byte) {
 					</p>
 					<button
 						class={ roundButton }
-						_={`
+						_={ `
 							on click
 								get first(<#oidc-client-`+client.ID+` div.hive-system-id/>)
 								set target to it
 								put (next <template/>).innerHTML into it
 								call htmx.process(target)
-						`}
+						` }
 					><p>✎</p></button>
 					<template>
 						@hiveSystemIdForm(client.ID, client.HiveSystemID)
@@ -56,7 +55,6 @@ templ OidcClient(client database.OidcClient, secret []byte) {
 				@hiveSystemIdForm(client.ID, "")
 			}
 		</div>
-
 		<ul class="pl-3">
 			for _, uri := range client.RedirectUris {
 				@RedirectURI(client.ID, uri)
@@ -104,7 +102,7 @@ templ hiveSystemIdForm(clientID string, initVal string) {
 		<input
 			type="text"
 			name="hive-system-id"
-			id="hive-system-id"
+			id={ "hive-system-id" + clientID }
 			class={ input + " grow-0" }
 			value={ initVal }
 		/>
