--- a/templates/admin.templ
+++ b/templates/admin.templ
@@ -8,7 +8,7 @@ import (
 )
 
 templ adminNav() {
-	{{ perms := ctx.Value(hive.Permissions{}).(hive.Permissions) }}
+	{{ perms := ctx.Value(hive.PermissionsCtxKey{}).(hive.Permissions) }}
 	if perms.ReadMembers {
 		<a href="/admin/members">Members</a>
 	}
